all test passed

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = Pizzeria_Pasquali.settings
+DJANGO_SETTINGS_MODULE = Pizzeria_Pasquali.settings.local
 python_files = test_*.py tests.py
+filterwarnings =
+    ignore::django.utils.deprecation.RemovedInDjango60Warning
