--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -20,10 +20,8 @@ services:
     image: postgres:14
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      POSTGRES_DB: your_db_name
-      POSTGRES_USER: your_db_user
-      POSTGRES_PASSWORD: your_db_password
+    env_file:
+      - .env  
     ports:
       - "5432:5432"
 
